# tinylm-council

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  start.ps1  start.sh
backend/: context_utils.py  council.py  main.py  model_manager.py  prompts.py  ranking_parser.py  settings.py  storage.py  web_search.py
backend/providers/: base.py  lmstudio_native.py  ollama_native.py  openai_compatible.py  openrouter.py  registry.py
docs/: SERVER_SETUP.md  WINDOWS_SETUP.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.webmanifest
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/: ChatInterface.jsx  Sidebar.jsx  Stage1.jsx  Stage2.jsx  Stage3.jsx  StageProgress.jsx  WebSources.jsx
frontend/src/pages/: ModelManager.jsx  Settings.jsx  SetupWizard.jsx
